# ArbitrageEdge

./: .env_template  DATABASE_SETUP.md  Dockerfile  IMPLEMENTATION.md  LICENSE  POSTGRESQL_PYDANTIC_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
src/app/: config.py  main.py  start_services.py
src/app/db/: create_db.py
src/app/the_odds/: in_season.py
