[project]
name = "arbitrageedge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "celery>=5.6.2",
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]
